<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:text="@string/reg_page_title"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/reg_email_hint"
            android:inputType="textPersonName"
            android:paddingTop="20dp"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/regPwdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/reg_pwd_hint"
            android:inputType="textPersonName"
            android:paddingTop="20dp"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3F51B5"
            android:fontFamily="sans-serif-light"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/reg_button"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/reg_or_login"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/toLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3F51B5"
            android:fontFamily="sans-serif-light"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/login_button"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>